--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ h1 {
     color: #404040;
 }
 
-.like-button:not(.like-button--liked):hover {
+.like-button:hover {
     background-color: #e3e3e3
 }
 
@@ -122,4 +122,7 @@ h1 {
 .like-button--liked {
     color: #0CD977;
     cursor: default;
+}
+.like-button--liked:hover{
+    cursor: pointer;
 }
